<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Календарь праздников ++</string>
    
    <string name="db_err_title">Ошибка распаковки базы данных</string>
    <string name="db_err_message">Убедитесь, что на устройстве достаточно свободного места и переустановите приложение.</string> 
    
    <string name="adMob">a150e51c3db4af1</string>
    
    <string name="str_action_bar_tite">Праздники</string>
    <string name="str_manager_action_bar_tite">Календари</string>
    <string name="str_find_holiday">Поиск праздника</string>
    <string name="str_save">Сохранить</string>
    <string name="str_new_holiday">Новый праздник</string>
    
    <string name="msg_src_del_err">Только праздники пользователя доступны для удаления.</string>
    <string name="msg_no_title">Не указано название праздника.</string>    
    <string name="msg_new_rec">Запись добавлена.</string>
    <string name="msg_please_wait">Пожалуйста, подождите&#8230;</string>
    <string name="msg_del_err">Не удалось сохранить запись.</string>
    <string name="msg_download_offer">Установка календаря</string>
    <string name="msg_error">Ошибка</string>
    <string name="msg_market_link_error">Не удалось открыть Google Play.</string>
    <string name="msg_ok">Ok</string>
    
    <string name="msg_downloading">"Идёт загрузка календаря&#8230;"</string>
    <string name="msg_downloaded">"Календарь загружен."</string>
    <string name="msg_not_downloaded">"Не удалось загрузить календарь."</string>
    
    <!-- /Настройки\ -->
    <string name="pref_holidays_list">Список праздников</string>    
    <string name="pref_russian_holidays">Праздники России</string>
    <string name="pref_belorussian_holidays">Праздники Белоруссии</string>
    <string name="pref_ukrane_holidays">Праздники Украины</string>
    <string name="pref_kazachstan_holidays">Праздники Казахстана</string>
    <string name="pref_world_holidays">Мировые праздники</string>
    <string name="pref_user_holidays">Праздники пользователя</string>
    
    <string name="pref_widget_options">Настройки виджетов</string>
    <string name="pref_widget_4x1">Виджет 4х1</string>
    <string name="pref_widget_4x2">Виджет 4х2</string>
    <string name="pref_widget_rows">Число строк</string>
    
    <string name="pref_face_options">Внешний вид</string>  
    <!-- \Настройки/ -->
    
    <!-- /Меню\ -->
    <string name="action_settings">Settings</string>
    <string name="action_add_to_calendar">Выгрузить в календарь</string>
    <string name="action_del_holiday">Удалить праздник</string>
    <string name="action_go_to_current_date">Сегодняшний день</string>
    <string name="action_search">Найти праздник</string>
    <string name="action_go_to_date">Выбрать дату</string>
    <string name="action_add_holiday">Добавить праздник</string>
    <string name="action_full_version">Полная версия</string>
    <string name="action_calendars">Список календарей</string>
    <string name="action_preferences">Настройки</string>
    <string name="action_share_vk">Поделиться</string>
    <!-- \Меню/ -->

</resources>
